feat: Enhanced UI/UX with horizontal settings layout and comprehensive dashboard features
- Redesigned Settings panel with wide horizontal layout (3-column grid)
- Added extensive dashboard analytics: Achievements, Session History, Progress Streak, Personal Bests, Leaderboard
- Implemented AI-powered practice drill integration with theme-aware feedback panel
- Enhanced navigation with memory state to preserve user's previous view context
- Added 3 new themes (ocean, sunset, forest) with emoji-rich theme selection
- Improved settings UI with descriptive helper text and modern layout
- Fixed JSX structure and improved component organization
- Added comprehensive documentation for all new features

--- a/index.html
+++ b/index.html
@@ -60,6 +60,42 @@
         --color-text-success: 120 100% 70%;
         --color-text-warning: 60 100% 50%;
       }
+      html[data-theme='ocean'] {
+        --color-bg-primary: 210 100% 6%;
+        --color-bg-secondary: 210 100% 10%;
+        --color-bg-tertiary: 210 100% 15%;
+        --color-border-primary: 210 100% 20%;
+        --color-text-primary: 180 100% 95%;
+        --color-text-secondary: 180 50% 75%;
+        --color-text-accent: 190 100% 60%;
+        --color-text-danger: 350 100% 65%;
+        --color-text-success: 160 100% 60%;
+        --color-text-warning: 45 100% 60%;
+      }
+      html[data-theme='sunset'] {
+        --color-bg-primary: 20 30% 8%;
+        --color-bg-secondary: 25 35% 12%;
+        --color-bg-tertiary: 30 40% 18%;
+        --color-border-primary: 35 45% 25%;
+        --color-text-primary: 30 100% 95%;
+        --color-text-secondary: 25 60% 75%;
+        --color-text-accent: 15 100% 65%;
+        --color-text-danger: 350 100% 70%;
+        --color-text-success: 120 70% 60%;
+        --color-text-warning: 45 100% 65%;
+      }
+      html[data-theme='forest'] {
+        --color-bg-primary: 140 25% 8%;
+        --color-bg-secondary: 140 30% 12%;
+        --color-bg-tertiary: 140 35% 18%;
+        --color-border-primary: 140 40% 25%;
+        --color-text-primary: 120 30% 95%;
+        --color-text-secondary: 120 25% 75%;
+        --color-text-accent: 140 70% 60%;
+        --color-text-danger: 350 80% 65%;
+        --color-text-success: 140 70% 60%;
+        --color-text-warning: 60 80% 60%;
+      }
 
       /* Animations for Toasts */
       @keyframes slide-in-right {
