Enhanced header with theme selector and optimized navigation
- Added theme selector dropdown to header with 6 themes (dark, light, hacker, ocean, sunset, forest)
- Removed Dashboard from main navigation, now appears for authenticated users only
- Enhanced header visual design with improved gradients and backdrop blur
- Added mobile theme selector in mobile menu with grid layout
- Implemented click-outside functionality for theme dropdown
- Optimized header spacing and visual hierarchy
- Added professional landing page sections (Pricing, Testimonials, CallToAction)
- Improved TypeForge logo with enhanced gradient effects and scale animations
- Updated sidebar and lesson selector with consistent clickable branding
- Enhanced mobile menu with better animations and styling
- Added accessibility improvements (aria-labels, focus states)
- Maintained smooth scrolling navigation for all sections

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         --color-text-success: 145 63% 49%;
         --color-text-warning: 39 92% 56%;
       }
+
+      /* Smooth scrolling for navigation */
+      html {
+        scroll-behavior: smooth;
+      }
       html[data-theme='dark'] {
         --color-bg-primary: 222 47% 11%;
         --color-bg-secondary: 222 47% 15%;
