feat: Comprehensive SEO optimization and TypingPath branding enhancement
## SEO Optimizations:
- Enhanced HTML meta tags with typing-related keywords
- Added Vietnam typing and Vietnamese learner keywords
- Improved meta descriptions for better search visibility
- Added Open Graph and Twitter Card meta tags
- Optimized page title for search engines

## Package.json Updates:
- Enhanced description with TypingPath branding
- Added comprehensive typing-related keywords
- Included Vietnam/Vietnamese typing keywords for regional SEO
- Added touch-typing, typing-speed, WPM-test keywords

## Content Optimizations:
- Updated Hero section with TypingPath AI™ branding
- Enhanced hero description for Vietnam typing market
- Updated Features section with TypingPath AI™ Coach
- Maintained consistent TypingPath branding throughout

## SEO Keywords Added:
- typing-practice, touch-typing, typing-speed
- typing-test, learn-typing, typing-lessons
- vietnam-typing, vietnamese-typing
- typing-master, keyboard-practice, typing-skills
- wpm-test, typing-trainer, online-typing

Ready for Google upload and optimized for Vietnamese market!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TypingPath: Modern Typing Master</title>
+    <title>TypingPath: Modern Typing Master - Learn Touch Typing Fast</title>
+    <meta name="description" content="TypingPath - The ultimate typing practice platform. Learn touch typing, improve typing speed and accuracy with AI-powered lessons. Perfect for Vietnam typing practice and Vietnamese learners.">
+    <meta name="keywords" content="typing practice, touch typing, typing speed, typing test, learn typing, typing lessons, Vietnam typing, Vietnamese typing, typing master, keyboard practice, typing skills, WPM test, typing trainer, online typing, typing course">
+    <meta name="author" content="TypingPath">
+    <meta property="og:title" content="TypingPath: Modern Typing Master - Learn Touch Typing Fast">
+    <meta property="og:description" content="Master touch typing with TypingPath. AI-powered lessons, real-time feedback, and gamified learning. Perfect for Vietnamese learners and typing enthusiasts.">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="TypingPath">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="TypingPath: Modern Typing Master">
+    <meta name="twitter:description" content="Learn touch typing fast with AI-powered lessons and real-time feedback. Perfect for Vietnam typing practice.">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
